Refactoring LoginFilter